# bufferVault

./: .gitignore  .vault_salt  Cargo.toml  HOWDO.txt  IMPLEMENTATION.md  README.md  RELEASE_NOTES.md  SECURITY.md  build.rs  clipboard_monitor.py  config.py  encryption.py  example.py  gui.py  main.py  requirements.txt  storage.py  test_buffervault.py
docs/: DESIGN.md  RELEASE_NOTES.md
example_vault/: index.json
resources/: app.rc  gen_icon.ps1
src/: app.rs  constants.rs  error.rs  lib.rs  main.rs
src/clipboard/: injector.rs  mod.rs  monitor.rs
src/config/: mod.rs  parser.rs  settings.rs
src/crypto/: aes_gcm.rs  dpapi.rs  ghash.rs  mod.rs  pbkdf2.rs  secure_buf.rs  sha256.rs
src/history/: entry.rs  mod.rs  ring.rs  search.rs
src/storage/: format.rs  mod.rs  vault.rs
src/system/: autostart.rs  hotkey.rs  mod.rs  process.rs  tray.rs  win32.rs
src/ui/: dpi.rs  manager.rs  mod.rs  permanent.rs  popup.rs  renderer.rs  sidebar.rs  splash.rs  theme.rs  window.rs
